--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
-<h1>Some content</h1>
+<h1>Some different content</h1>
 <!-- begin js files-->
 <!-- includes Bootstrap v4.2.1, JQuery v3.3.1 -->
 <script src="https://code.jquery.com/jquery-3.3.1.js"
