--- a/index.html
+++ b/index.html
@@ -1,33 +1,135 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio for Trent Davis</title>
+    <title>Materialize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Meyer CSS reset-->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
-    <!-- includes Bootstrap v4.2.1, FontAwesome v5.6.3-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS/JS for Materialize -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <!-- DEVICON and GOOGLE FONTS -->
+    <link rel="stylesheet"
+        href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Varela+Round" rel="stylesheet">
+
+
 </head>
+
 <body>
-<h1>Some different content</h1>
-<!-- begin js files-->
-<!-- includes Bootstrap v4.2.1, JQuery v3.3.1 -->
-<script src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-    crossorigin="anonymous"></script>
-<script src="assets/js/app.js"></script>
-<!-- end js files -->
+    <!-- MOBILE RESPONSIVE MENU -->
+    <header>
+        <nav>
+            <div class="nav-wrapper teal darken-3">
+                <div class="container">
+                    <a href="#!" class="brand-logo">
+                        <img src="assets/images/logo.svg" class="responsive-img">
+                        <small
+                            style="position:relative;left:13px;font-family: 'Permanent Marker', cursive;">Web.dev</small></a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i
+                            class="material-icons">menu</i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li class="active"><a href="#!">Home</a></li>
+                        <li><a href="#!">About</a></li>
+                        <li><a href="#!">Portfolio</a></li>
+                        <li><a href="#!">Contact</a></li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li><a href="#!">Home</a></li>
+                        <li><a href="#!">About</a></li>
+                        <li><a href="#!">Portfolio</a></li>
+                        <li><a href="#!">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <section>
+            <div class="container">
+
+            </div>
+        </section>
+    </header>
+    <main>
+        <div class="container">
+            <h1 class="header-text center-align">
+                Full Stack Web Designer & Developer
+            </h1>
+            <div class="divider"></div>
+            <div class="row">
+                <div class="col l6 xl6 hide-on-med-and-down">
+                    <img src="assets/images/image-1999636.png" alt="" width="540" class="responsive-img">
+                </div>
+                <div class="col s12 l6 xl6">
+                    <div class="card-panel grey portfolio-cta">
+                        <h5 class="white-text">Fully responsive, custom designed websites.
+                        </h5>
+                        <div class="btn teal darken-3 right waves-effect waves-light"><i class="material-icons right">chevron_right</i> View
+                            Portfolio</div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+    </main>
+    <footer class="page-footer teal darken-3">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Trent Davis</h5>
+                    <div class="grey-text text-lighten-4 contact-details">
+                        <i class="fas fa-map-marker-alt"></i> Round Rock, Texas, United States<br>
+                        <i class="fas fa-envelope"></i>
+                        <span id="emailAddress">*************@gmail.com</span>
+                        <small class="show-hide" id="emailToggle" data-visibility="hidden">Show</small>
+                        <br>
+                        <i class="fas fa-phone"></i>
+                        <span id="phoneNumber">512.*******</span>
+                        <small class="show-hide" id="phoneToggle" data-visibility="hidden">Show</small>
+                    </div>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text"><i class="fab fa-github"> Github</i></h5>
+                    <ul>
+                        <li>
+                            <a class="grey-text text-lighten-3" target="_blank"
+                                href="https://github.com/trentdavis78">https://github.com/trentdavis78
+                            <i class="fas fa-external-link-square-alt"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2019 Copyright
+                <a class="grey-text text-lighten-4 right social-icons" href="#!"><i
+                        class="fab fa-twitter-square fa-lg"></i></a>
+                <a class="grey-text text-lighten-4 right social-icons" href="#!"><i
+                        class="fab fa-linkedin fa-lg"></i></a>
+                <a class="grey-text text-lighten-4 right social-icons" href="#!"><i
+                        class="fab fa-facebook-square fa-lg"></i></a>
+            </div>
+        </div>
+    </footer>
+
+
+
+    <!-- begin js files-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="assets/js/app.js"></script>
+    <!-- end js files -->
 </body>
 
 </html>
