Added home page cards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Varela+Round" rel="stylesheet">
 
-
 </head>
 
 <body>
@@ -38,14 +37,16 @@
                             class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                         <li class="active"><a href="#!">Home</a></li>
-                        <li><a href="#!">About</a></li>
                         <li><a href="#!">Portfolio</a></li>
+                        <li><a href="#!">About</a></li>
+                        <li><a href="#!">Resources</a></li>
                         <li><a href="#!">Contact</a></li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
                         <li><a href="#!">Home</a></li>
-                        <li><a href="#!">About</a></li>
                         <li><a href="#!">Portfolio</a></li>
+                        <li><a href="#!">About</a></li>
+                        <li><a href="#!">Resources</a></li>
                         <li><a href="#!">Contact</a></li>
                     </ul>
                 </div>
@@ -65,17 +66,88 @@
             <div class="divider"></div>
             <div class="row">
                 <div class="col l6 xl6 hide-on-med-and-down">
-                    <img src="assets/images/image-1999636.png" alt="" width="540" class="responsive-img">
+                    <img src="assets/images/image-1999636.png" alt="" class="responsive-img">
+                </div>
+                <div class="col l6 xl6 hide-on-large-only">
+                    <img src="assets/images/laptop.png" alt="" class="responsive-img">
                 </div>
                 <div class="col s12 l6 xl6">
                     <div class="card-panel grey portfolio-cta">
                         <h5 class="white-text">Fully responsive, custom designed websites.
                         </h5>
-                        <div class="btn teal darken-3 right waves-effect waves-light"><i class="material-icons right">chevron_right</i> View
+                        <div class="btn teal darken-3 right waves-effect waves-light"><i
+                                class="material-icons right">play_arrow</i> View
                             Portfolio</div>
                         <div class="clearfix"></div>
                     </div>
                 </div>
+            </div>
+            <div class="row" style="margin-top:4rem">
+                <div class="col s12 m12 lg4 xl4">
+                    <div class="card">
+                        <div class="card-title home-cards">
+                            <div class="card-vector">
+                                <i class="fas fa-user-tie"></i>
+                            </div>
+                            <span class="teal-text text-darken-3 card-title">About Me</span>
+                        </div>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi asperiores
+                                voluptatibus aspernatur commodi omnis veniam rerum corrupti nulla inventore? Dicta
+                                cumque quae corporis nihil minus, ipsa nulla quasi dolorem!</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="btn teal darken-3 right waves-effect waves-light"><i
+                                    class="material-icons right">play_arrow</i>Read More
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m12 lg4 xl4">
+                    <div class="card">
+                        <div class="card-title home-cards">
+                            <div class="card-vector">
+                                <i class="fas fa-code"></i>
+                            </div>
+                            <span class="teal-text text-darken-3 card-title">Services</span>
+                        </div>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi asperiores
+                                voluptatibus aspernatur commodi omnis veniam rerum corrupti nulla inventore? Dicta
+                                cumque quae corporis nihil minus, ipsa nulla quasi dolorem!</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="btn teal darken-3 right waves-effect waves-light"><i
+                                    class="material-icons right">play_arrow</i>Read More
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m12 lg4 xl4">
+                    <div class="card">
+                        <div class="card-title home-cards">
+                            <div class="card-vector">
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                            <span class="teal-text text-darken-3 card-title">Resources</span>
+                        </div>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi asperiores
+                                voluptatibus aspernatur commodi omnis veniam rerum corrupti nulla inventore? Dicta
+                                cumque quae corporis nihil minus, ipsa nulla quasi dolorem!</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="btn teal darken-3 right waves-effect waves-light"><i
+                                    class="material-icons right">play_arrow</i>Read More
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
 
 
@@ -104,7 +176,7 @@
                         <li>
                             <a class="grey-text text-lighten-3" target="_blank"
                                 href="https://github.com/trentdavis78">https://github.com/trentdavis78
-                            <i class="fas fa-external-link-square-alt"></i></a>
+                                <i class="fas fa-external-link-square-alt"></i></a>
                         </li>
                     </ul>
                 </div>
