Moving to WAMP Server

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Materialize</title>
+    <title>TDWeb.Dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Meyer CSS reset-->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
@@ -39,6 +39,7 @@
                         <li class="active"><a href="#!">Home</a></li>
                         <li><a href="#!">Portfolio</a></li>
                         <li><a href="#!">About</a></li>
+                        <li><a href="#!">Services</a></li>
                         <li><a href="#!">Resources</a></li>
                         <li><a href="#!">Contact</a></li>
                     </ul>
@@ -46,6 +47,7 @@
                         <li><a href="#!">Home</a></li>
                         <li><a href="#!">Portfolio</a></li>
                         <li><a href="#!">About</a></li>
+                        <li><a href="#!">Services</a></li>
                         <li><a href="#!">Resources</a></li>
                         <li><a href="#!">Contact</a></li>
                     </ul>
